<resources>
    <string name="app_name">mybible</string>
    <string name="password">password</string>
    <string name="password_validate">ok</string>
    <string name="btnSendRequest">Send HTTP Request</string>
    <string name="menu_send_request">Send Request</string>
    <string name="menu_input_request">Input Request</string>
    <string name="btnInputRequest">Input HTTP Request</string>
    <string name="money">money</string>
    <string name="balance">balanço</string>
    <string name="balance_debts">a receber</string>
    <string name="balance_pay">a pagar</string>
    <string name="to_do">to do</string>
    <string name="sync">sync</string>
    <string name="add_data">add data</string>
    <string name="input_name">name</string>
    <string name="input_status">status</string>
    <string name="text_view_date">data</string>
    <string name="text_view_description">descrição</string>
    <string name="text_view_value">valor</string>
    <string name="text_view_source_destination">pessoa</string>
    <string name="text_view_repay">terá reembolso</string>
    <string name="text_view_repayment">reembolso</string>
    <string name="text_view_type">tipo</string>
    <string name="text_view_monday">segunda</string>
    <string name="text_view_tuesday">terça</string>
    <string name="text_view_wednesday">quarta</string>
    <string name="text_view_thursday">quinta</string>
    <string name="text_view_friday">sexta</string>
    <string name="text_view_saturday">sábado</string>
    <string name="text_view_sunday">domingo</string>
    <string name="edit_text_new_box">caixa</string>
    <string name="edit_text_new_location">localização</string>
    <string name="text_view_name">nome</string>
    <string name="text_view_category">categoria</string>
    <string name="text_view_box">caixa</string>
    <string name="text_view_location">localização</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
